--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,7 @@ phases:
       - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imagedeDetail.json
 
 artifacts:
-  files: imagedeDetail.json
+  files:
+    - appspec.yml
+    - taskdef.json
+    - imageDetail.json
