--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,9 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imagedeDetail.json
+      - sed -i -e "s#<CONTAINER_NAME>#$CONTAINER_NAME#" taskdef.json
+      - sed -i -e "s#<TASK_FAMILY>#$TASK_FAMILY#" taskdef.json
+      - sed -i -e "s#<CONTAINER_NAME>#$CONTAINER_NAME#" appspec.yml
 
 artifacts:
   files:
