--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,7 @@ phases:
       - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imagedeDetail.json
       - sed -i -e "s#<CONTAINER_NAME>#$CONTAINER_NAME#" taskdef.json
       - sed -i -e "s#<TASK_FAMILY>#$TASK_FAMILY#" taskdef.json
+      - sed -i -e "s#<ACCOUNT_ID>#$ACCOUNT_ID#" taskdef.json
       - sed -i -e "s#<CONTAINER_NAME>#$CONTAINER_NAME#" appspec.yml
 
 artifacts:
